Encryption bug and dependency conflict bug fixed