@@ -35,17 +35,22 @@ public class ProviderConnectionController {
     private final String redirectUri;
 
 
-    private static final List<String> SCOPES =
-            Collections.singletonList("https://www.googleapis.com/auth/drive.file");
+    private static final List<String> SCOPES = List.of(
+            "https://www.googleapis.com/auth/drive.file",
+            "https://www.googleapis.com/auth/drive.metadata.readonly"
+    );
+    private final GoogleDriveProvider.Factory driveProviderFactory;
 
     public ProviderConnectionController(
             StorageProviderAccountRepository accountRepository,
             UserRepository userRepository,
+            GoogleDriveProvider.Factory driveProviderFactory,
             @Value("${GOOGLE_CLIENT_ID}") String clientId,
             @Value("${GOOGLE_CLIENT_SECRET}") String clientSecret,
             @Value("${GOOGLE_REDIRECT_URI}") String redirectUri) {
         this.accountRepository = accountRepository;
         this.userRepository = userRepository;
+        this.driveProviderFactory = driveProviderFactory;
         this.clientId = clientId;
         this.clientSecret = clientSecret;
         this.redirectUri = redirectUri;
@@ -124,8 +129,8 @@ public class ProviderConnectionController {
         account.setUser(user);
         account.setProviderType(ProviderType.GOOGLE_DRIVE);
         account.setAuthType(StorageProviderAccount.AuthType.OAUTH2);
-        account.setAccessToken(AesGcmService.encrypt(accessToken));
-        account.setRefreshToken(AesGcmService.encrypt(refreshToken));
+        account.setAccessToken(accessToken);
+        account.setRefreshToken(refreshToken);
         account.setTokenExpiresAt(
                 expiresInSeconds != null
                         ? Instant.now().plusSeconds(expiresInSeconds)
@@ -136,7 +141,22 @@ public class ProviderConnectionController {
 
         accountRepository.save(account);
 
+        try {
+            GoogleDriveProvider provider = driveProviderFactory.create(account);
+            GoogleDriveProvider.QuotaInfo quota = provider.fetchQuota();
+
+            account.setTotalQuotaBytes(quota.totalBytes());
+            account.setUsedQuotaBytes(quota.usedBytes());
+            accountRepository.save(account);
+        } catch (RuntimeException e) {
+            // Connection succeeded and tokens are valid — don't fail the whole flow over a
+            // quota-read hiccup. Leave quota at 0 for now; a health-check job can retry later.
+            // TODO: log this properly once logging is wired in
+            e.printStackTrace();
+        }
+
         return ResponseEntity.ok("Google Drive account connected successfully.");
+
     }
 
     @DeleteMapping("/{accountId}")
